--- a/layouts/partials/sections/services.html
+++ b/layouts/partials/sections/services.html
@@ -1,41 +1,5 @@
-<style>
-    #services {
-        height: 160px;
-        background-color: var(--primary-color-1);
-    }
 
-    #services h2{
-        color: #ffffff;
-        margin: 0;
-    }
-
-    @media (max-width: 991px) {
-    #services {
-      height: 400px;
-    }
-
-    .feature{
-        margin: 20px 0;
-    }
-    #header .download-btn+.download-btn {
-      margin: 0 10px;
-    }
-
-    
-  }
-
-    .icon-button {
-        background-color: #ffffff;
-        width: 70px;
-        height: 70px;
-        border-radius: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-</style>
-
+{{ define "styling" }}<link rel="stylesheet" href="./css/page.css" />{{ end }}
 <div id="services" class="d-flex align-items-center">
 
     <div class="container">
