--- a/layouts/partials/sections/countdown.html
+++ b/layouts/partials/sections/countdown.html
@@ -1,155 +1,4 @@
-<style>
-    .countdown-container {
-        position: relative;
-        width: 100%;
-        height: 100vh;
-        padding: 80px 0px;
-    }
-
-    #countdown {
-        position: relative;
-        width: 100%;
-        padding: 0 0 160px;
-
-    }
-
-    .black-background {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 50%;
-        background-color: var(--primary-color-3);
-    }
-
-    /* You can style your countdown timer here */
-    .countdown-timer {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #FFFFFF;
-        background-image: url('/images/countdown.png');
-        background-size: cover;
-        background-position: center;
-        padding: 20px;
-        text-align: center;
-        width: 100%;
-        height: 90%;
-        border-radius: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-    }
-
-    .countdown-timer h2 {
-        font-size: 8rem;
-        font-weight: 700;
-    }
-
-    #circles {
-        position: absolute;
-        left: 0;
-        right: 0;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        bottom: -80px;
-    }
-
-    .works_section {
-        float: right;
-        width: 200px;
-        height: 200px;
-        border-radius: 101px;
-        display: block;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        color: #fff;
-    }
-
-    .works_section h2 {
-        font-size: 4rem;
-        margin-bottom: 0;
-    }
-
-    .works_section p {
-        font-size: 16px;
-    }
-
-    #upload_circle {
-        background-color: #2D9CDB;
-        z-index: 0;
-    }
-
-    #team_circle {
-        background-color: #2F80ED;
-        z-index: 1;
-        left: -21px;
-    }
-
-    #development_circle {
-        background-color: #25aed2;
-        z-index: 1;
-        left: -42px;
-    }
-
-    @media (max-width: 1100px) {
-        .countdown-timer h2 {
-            font-size: 6rem;
-            font-weight: 700;
-        }
-    }
-
-    @media (max-width: 860px) {
-        .countdown-timer h2 {
-            font-size: 4rem;
-            font-weight: 700;
-        }
-
-        #circles {
-
-            bottom: -60px;
-        }
-
-        .works_section {
-            width: 150px;
-            height: 150px;
-
-        }
-    }
-
-    @media (max-width: 580px) {
-        .countdown-timer h2 {
-            font-size: 3rem;
-            font-weight: 700;
-        }
-
-        #circles {
-
-            bottom: -40px;
-        }
-
-        .works_section {
-            width: 100px;
-            height: 100px;
-
-        }
-
-        .works_section h2 {
-            font-size: 2rem;
-        }
-
-        .works_section p {
-            font-size: 14px;
-        }
-
-    }
-</style>
+{{ define "styling" }}<link rel="stylesheet" href="./css/page.css" />{{ end }}
 <section id="countdown">
     <div class="black-background"></div>
     <div class="container">
