--- a/layouts/partials/sections/header.html
+++ b/layouts/partials/sections/header.html
@@ -1,93 +1,5 @@
-<style>
-  #header {
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-    padding: 70px 0 60px 0;
-  }
 
-  #header h1 {
-    margin: 0 0 10px 0;
-    font-size: 48px;
-    font-weight: 500;
-    line-height: 56px;
-    color: var(--primary-color-1);
-  }
-
-  #header h2 {
-    color: var(--primary-color-3);
-    margin-bottom: 50px;
-    font-size: 14px;
-  }
-
-  #header .download-btn {
-    font-weight: 500;
-    font-size: 15px;
-    border: 0;
-    padding: 10px 24px 10px 24px;
-    border-radius: 3px;
-    color: #fff;
-    background-color: var(--primary-color-2);
-    border-radius: 30px;
-  }
-
-  #header .download-btn:hover {
-    /* background: #5777ba; */
-  }
-
-  #header .download-btn i {
-    font-size: 20px;
-    position: absolute;
-    left: 18px;
-    top: 8.5px;
-  }
-
-  #header .download-btn+.download-btn {
-    margin-left: 20px;
-  }
-
-  @media (max-width: 991px) {
-    #header {
-      text-align: center;
-    }
-
-    #header .download-btn+.download-btn {
-      margin: 0 10px;
-    }
-
-    #header .header-img {
-      text-align: center;
-    }
-
-    #header .header-img img {
-      width: 60%;
-    }
-  }
-
-  @media (max-width: 768px) {
-    #header h1 {
-      font-size: 28px;
-      line-height: 36px;
-    }
-
-    #header h2 {
-      font-size: 18px;
-      line-height: 24px;
-      margin-bottom: 30px;
-    }
-
-    #header .header-img img {
-      width: 70%;
-    }
-  }
-
-  @media (max-width: 575px) {
-    #header .header-img img {
-      width: 80%;
-    }
-  }
-</style>
-
+{{ define "styling" }}<link rel="stylesheet" href="./css/page.css" />{{ end }}
 <div id="header" class="d-flex align-items-center">
 
   <div class="container">
