--- a/layouts/partials/sections/news.html
+++ b/layouts/partials/sections/news.html
@@ -1,170 +1,5 @@
-<style>
-    #news {
-        width: 100%;
-        position: relative;
-        overflow: hidden;
-        padding: 70px 0 50px 0;
-    }
 
-    #news h1 {
-        margin: 0 0 10px 0;
-        font-size: 38px;
-        font-weight: 500;
-        line-height: 45.6px;
-        color: var(--primary-color-1);
-    }
-
-    #news h2 {
-        color: var(--primary-color-3);
-        margin-bottom: 20px;
-        font-size: 14px;
-        margin: 0;
-    }
-
-    #news h3 {
-        color: var(--primary-color-1);
-        margin-bottom: 0px;
-        font-size: 16px;
-        font-weight: 700;
-    }
-
-    #news .category-btn {
-        width: 88px;
-        height: 28px;
-        color: #fff;
-        background-color: var(--primary-color-2);
-        border: 0;
-        border-radius: 50px;
-        width: auto;
-    }
-
-    .news-title {
-        text-align: center;
-    }
-
-    .news-title h2 {
-        color: var(--primary-color-2) !important;
-        font-size: 36px !important;
-    }
-
-    @media (max-width: 991px) {
-        #news {
-            text-align: center;
-        }
-
-        #news .download-btn+.download-btn {
-            margin: 0 10px;
-        }
-
-        #news .news-img {
-            text-align: center;
-        }
-
-        #news .news-img img {
-            width: 60%;
-        }
-    }
-
-    @media (max-width: 768px) {
-        #news h1 {
-            font-size: 28px;
-            line-height: 36px;
-        }
-
-        #news h2 {
-            font-size: 18px;
-            line-height: 24px;
-            margin-bottom: 30px;
-        }
-
-        #news .news-img img {
-            width: 70%;
-        }
-    }
-
-    @media (max-width: 575px) {
-        #news .news-img img {
-            width: 80%;
-        }
-    }
-
-    .news-container {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 20px;
-    }
-
-    .news-container-image {
-        width: 100%;
-        height: 100%;
-        border-radius: 20px;
-        margin: 0 16px;
-        padding: 20px;
-    }
-
-    .news-container-typography {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 20px;
-        margin: 0 16px;
-        padding: 20px;
-    }
-
-    .news-container button {
-        width: 88px;
-        height: 28px;
-        color: #fff;
-        background-color: var(--primary-color-2);
-        border: 0;
-        border-radius: 50px;
-    }
-
-    .news-container-heading {
-        color: var(--primary-color-1);
-        font-family: Plus Jakarta Sans;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 32px;
-        text-align: left;
-    }
-
-    .news-container-text {
-        color: var(--primary-color-3);
-        font-family: Plus Jakarta Sans;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 19px;
-        text-align: left;
-    }
-
-    .news-container-action {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 7px;
-        /* align-self: stretch; */
-        margin: 0 16px;
-        padding: 0 20px;
-    }
-
-    .news-container-action p {
-        color: var(--primary-color-2);
-        font-family: Plus Jakarta Sans;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 28px;
-        /* 233.333% */
-        text-decoration-line: underline;
-        text-transform: uppercase;
-        cursor: pointer;
-    }
-</style>
-
+{{ define "styling" }}<link rel="stylesheet" href="./css/page.css" />{{ end }}
 <div id="news" class="d-flex align-items-center">
     <div class="container">
 
