--- a/layouts/partials/sections/newsletter.html
+++ b/layouts/partials/sections/newsletter.html
@@ -1,162 +1,5 @@
-<style>
-    #newsletter {
-        width: 100%;
-        position: relative;
-        overflow: hidden;
-        padding: 70px 0 60px 0;
-    }
 
-    #newsletter h1 {
-        margin: 0 0 10px 0;
-        font-size: 48px;
-        font-weight: 500;
-        line-height: 56px;
-        color: var(--primary-color-1);
-    }
-
-    #newsletter h2 {
-        color: var(--primary-color-3);
-        margin-bottom: 20px;
-        font-size: 14px;
-    }
-
-    #newsletter h3 {
-        color: var(--primary-color-1);
-        margin-bottom: 0px;
-        font-size: 16px;
-        font-weight: 700;
-    }
-
-    #newsletter img {
-        position: relative;
-        right: 0;
-        width: 475px;
-        height: 573px;
-    }
-
-    .news-details {
-        top: 223px;
-        right: 0;
-        width: 270px;
-        height: 260px;
-        background-color: #ffffff;
-        border-radius: 5.75px;
-        padding: 20px;
-        box-shadow: -24.2662296295166px 41.83832931518555px 100.41197204589844px 0px #0000001A;
-
-    }
-
-    .news-details h3 {
-        font-size: 16px !important;
-        font-weight: 700 !important;
-        line-height: 26.92px !important;
-        color: var(--primary-color-3) !important;
-        margin-bottom: 16px !important;
-    }
-
-    .news-details h1 {
-        font-size: 30px !important;
-        font-weight: 800 !important;
-        line-height: 26.92px !important;
-        color: var(--primary-color-2) !important;
-        padding: 8px 0;
-    }
-
-    .news-details h1 span {
-        font-size: 16px !important;
-        font-weight: 800 !important;
-        line-height: 26.92px !important;
-        color: var(--primary-color-2) !important;
-    }
-
-
-    @media (max-width: 991px) {
-        #newsletter {
-            text-align: center;
-        }
-
-        #newsletter .newsletter-img {
-            text-align: center;
-        }
-
-        #newsletter .newsletter-img img {
-            width: 60%;
-        }
-    }
-
-    @media (max-width: 768px) {
-        #newsletter h1 {
-            font-size: 28px;
-            line-height: 36px;
-        }
-
-        #newsletter h2 {
-            font-size: 18px;
-            line-height: 24px;
-            margin-bottom: 30px;
-        }
-
-        #newsletter .newsletter-img img {
-            width: 70%;
-        }
-    }
-
-    @media (max-width: 575px) {
-        #newsletter .newsletter-img img {
-            width: 80%;
-        }
-    }
-
-    .loginInput {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 16px;
-        margin-top: 16px;
-    }
-
-    .fullname,
-    .email {
-        width: 100%;
-        
-        padding: 16px;
-        padding-left: 50px;
-        border-radius: 5px;
-        border: 1px solid var(--primary-color-1);
-    }
-
-    .icon-input {
-        display: flex;
-        align-items: center;
-        width: 100%;
-    }
-
-    .icon-input i {
-       position: absolute;
-       margin: 0 10px;
-       margin-top: 5px;
-    }
-
-    .loginInput button {
-        display: flex;
-        width: 100%;
-        padding: 18px 24px;
-        justify-content: center;
-        align-items: center;
-        gap: 8px;
-        border: 0;
-        flex-shrink: 0;
-        border-radius: 50px;
-        background: var(--primary-color-1);
-        color: #FFF;
-        /* font-family: Plus Jakarta Sans; */
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-    }
-</style>
-
+{{ define "styling" }}<link rel="stylesheet" href="./css/page.css" />{{ end }}
 <div id="newsletter" class="d-flex align-items-center">
 
     <div class="container">
