--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,4 @@
-<!-- {{ $css := resources.Get "css/page.css" | resources.Minify | resources.Fingerprint }} -->
-
+{{ $css := resources.Get "css/page.css" | minify }}
 
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -8,8 +7,8 @@
 
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/page.css" as="style">
-<!-- <link rel="stylesheet" href="{{ $css.Permalink }}" integrity="{{ $css.Data.Integrity }}"> -->
+<link href="{{ $css.RelPermalink }}" rel="stylesheet">
+
 <title>{{ .Site.Title }}</title>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
