update performance issues

--- a/layouts/partials/sections/features.html
+++ b/layouts/partials/sections/features.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-2 order-lg-1 features-img">
-                <img class="img-fluid" src="/images/features-image.png" alt="features">
+                <img class="img-fluid" src="/images/features-image.png" alt="features" loading="lazy">
             </div>
             <div
                 class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
@@ -26,7 +26,7 @@
                         <li class="text-center">
                             <div class="d-flex justify-content-center align-items-center gap-3">
                                 <div class="icon-button">
-                                    <img class="img-fluid" src="/images/cloud-icon.png" alt="header">
+                                    <img class="img-fluid" src="/images/cloud-icon.png" alt="header" loading="lazy">
                                 </div>
                                 <h3>Maecenas vel aliquet dolor, vel cursus augue.</h3>
                             </div>
