--- a/layouts/partials/sections/newsletter.html
+++ b/layouts/partials/sections/newsletter.html
@@ -15,9 +15,9 @@
                     <div class="d-flex flex-column gap-2 input-fields justify-content-center">
                         <div class="loginInput">
                             <div class="icon-input">
-                                <i><object data="/icons/Profile.svg" width="20" height="20"> </object></i>
+                                <i><object data="/icons/Profile.svg" width="20" height="20" alt="icon"> </object></i>
 
-                                <input class="fullname" id="text" type="text" placeholder="Full Name">
+                                <input class="fullname" id="text" type="text" placeholder="Full Name" alt="icon">
                             </div>
                             <div class="icon-input">
                                 <i> <object data="/icons/Send.svg" width="20" height="20"> </object></i>
@@ -30,7 +30,7 @@
             </div>
             <div
                 class="col-lg-6 d-lg-flex flex-lg-column position-relative align-items-stretch order-1 order-lg-2 newsletter-img">
-                <img class="img-fluid" src="/images/newsletter-image.png" alt="newsletter">
+                <img class="img-fluid" src="/images/newsletter-image.png" alt="newsletter" loading="lazy">
                 <div class="position-absolute news-details">
                     <h3>Our Numbers</h3>
                     <h1>20K <span>Users</span></h1>
