--- a/layouts/partials/sections/services.html
+++ b/layouts/partials/sections/services.html
@@ -7,7 +7,7 @@
             <div class="feature col-lg-4 justify-content-center align-items-center ">
                 <div class="d-flex justify-content-center align-items-center gap-3">
                     <div class="icon-button">
-                        <img class="img-fluid" src="/images/lock-icon.png" alt="header">
+                        <img class="img-fluid" src="/images/lock-icon.png" loading="lazy" alt="header">
                     </div>
                     <h2>SERVICE A</h2>
                 </div>
@@ -15,7 +15,7 @@
             <div class="feature col-lg-4 justify-content-center align-items-center ">
                 <div class="d-flex justify-content-center align-items-center gap-3">
                     <div class="icon-button">
-                        <img class="img-fluid" src="/images/database-icon.png" alt="header">
+                        <img class="img-fluid" src="/images/database-icon.png" loading="lazy" alt="header">
                     </div>
                     <h2>SERVICE B</h2>
                 </div>
@@ -23,7 +23,7 @@
             <div class="feature col-lg-4 d-lg-flex flex-lg-column justify-content-center align-items-center ">
                 <div class="d-flex justify-content-center align-items-center gap-3">
                     <div class="icon-button">
-                        <img class="img-fluid" src="/images/bubble-icon.png" alt="header">
+                        <img class="img-fluid" src="/images/bubble-icon.png" loading="lazy" alt="header">
                     </div>
                     <h2>SERVICE C</h2>
                 </div>
