--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -10,14 +10,13 @@
 @font-face {
   font-family: 'Plus Jakarta Sans';
   src:
-
     url('/fonts/PlusJakartaSans-VariableFont_wght.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 body {
-  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-family: 'Plus Jakarta Sans', 'Helvetica', Arial, sans-serif;
 }
 
 .topbar {
