--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
 
                 <div class=" col-md-4 footer-logo">
                     <div class="d-flex justify-content-center">
-                        <img src="/images/Logo-white.png" alt="Logo" />
+                        <img src="/images/Logo-white.png" alt="Logo" loading="lazy"/>
                     </div>
                 </div>
                 <div class=" col-md-4 footer-links">
