--- a/layouts/partials/sections/news.html
+++ b/layouts/partials/sections/news.html
@@ -9,7 +9,7 @@
                 <p>Lorem ipsum dolor</p>
             </div>
             <div class="col-lg-9 d-lg-flex flex-lg-column align-items-stretch order-2 order-lg-1 news-img">
-                <img class="img-fluid" src="/images/news.png" alt="news">
+                <img class="img-fluid" src="/images/news.png" alt="news" loading="lazy">
             </div>
             <div
                 class="col-lg-3 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
@@ -32,7 +32,7 @@
         <div class="row ">
             <div class="col-lg-4 col-md-6 news-container">
                 <div class="news-container-image">
-                    <img class="img-fluid" src="/images/news1.png" alt="news1">
+                    <img class="img-fluid" src="/images/news1.png" loading="lazy" alt="news1">
                 </div>
                 <div class="news-container-typography">
                     <button>Category</button>
@@ -49,7 +49,7 @@
             </div>
             <div class="col-lg-4 col-md-6 news-container">
                 <div class="news-container-image">
-                    <img class="img-fluid" src="/images/news1.png" alt="news1">
+                    <img class="img-fluid" src="/images/news1.png" loading="lazy" alt="news1">
                 </div>
                 <div class="news-container-typography">
                     <button>Category</button>
@@ -66,7 +66,7 @@
             </div>
             <div class="col-lg-4 col-md-6 news-container">
                 <div class="news-container-image">
-                    <img class="img-fluid" src="/images/news1.png" alt="news1">
+                    <img class="img-fluid" src="/images/news1.png" loading="lazy" alt="news1">
                 </div>
                 <div class="news-container-typography">
                     <button>Category</button>
